--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="/static/style.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
 <nav class="navbar">
-    <a href="/">Home</a>
-    <!-- <a href="/users">Users</a>
-    <a href="/posts">Posts</a>
-    <a href="/tags">Tags</a>
-    <a href="/users/new"><button class="navuser">Add User</button></a> -->
+    <button><a href="/">Home</a></button>
+    <button><a href="/login">Login</a></button>
+    {% block navbar %}
+{% endblock %}
 </nav>
+
+<body>
 
 <main id="content">
     {% block content %} {% endblock %}  
